WIP: add to cart button

--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
     <title>college website</title>
 
     <!-- font awesome cdn link  -->
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
     <!-- custom css file link  -->
     <link rel="stylesheet" href="style\style.css">
-
 </head>
 
 <body>
-    <a href="https://biznus-template.webflow.io/alert/how-were-responding-to-covid-19">
+    <!-- <a href="https://biznus-template.webflow.io/alert/how-were-responding-to-covid-19">
         <div class="top-bar">
             <div class="btn btn-pill">
                 Announcement
@@ -31,7 +28,7 @@
     <div class="box-2">
         <span>
             <i>ACME</i>
-            <ul class='fas fa-sliders-h' style="color:black; font-size: 24px;"></ul>
+            <ul class="fas fa-sliders-h" style="color:black; font-size: 24px;"></ul>
         </span>
         <nav class="navbar">
             <a href="#home">home</a>
@@ -39,16 +36,12 @@
             <a href="#Shops">products</a>
             <a href="#review">Donate</a>
             <a href="#contact">contact</a>
-
         </nav>
-
         <div class="icons">
             <div class="fas fa-shopping-cart" id="cart-btn" data-tilt data-tilt-scale="1.1" data-tilt-glare
                 data-tilt-max-glare="0.9"></div>
         </div>
-
-    </div>
-
+    </div> -->
     <!-- <div class="contain-tab">
         <h1>Shopping cart</h1>
         <div class="ui">
@@ -82,39 +75,19 @@
 
                 </div>
             </div> -->
-    <div class="cartTab">
+    <!-- <div class="cartTab">
         <h1>Shopping Cart</h1>
-        <div class="listCart">
+        <div class="listCart"></div>
 
-        </div>
-        <div class="btn">
-            <button class="close">CLOSE</button>
-            <button class="checkOut">Check Out</button>
-        </div>
     </div>
-
-
-
-    <div class="ul">
+    <div class="btn">
+        <button class="close">CLOSE</button>
+        <button class="checkOut">Check Out</button>
+    </div> -->
+    <!-- <div class="ul">
         <button class="close">CLOSE</button>
         <button class="add">CHECKOUT</button>
     </div>
-
-
-
-
-
-
-
-
-
-    </div>
-
-
-
-    </div>
-
-
     <section class="home" id="home">
 
         <div class="content">
@@ -143,7 +116,6 @@
         <span>WHO <span style="color:red">WE</span> ARE:👸<span>????</span>
         </span>
     </section>
-
     <p>Adventure Expertise is an independent company run by three of the UK's most qualified Mountaineering Instructors
         - Jake Phillips and Cat and Andy Charlton. We have worked at the highest levels for many years, guiding all over
         the world, running skills courses, outdoor activities, training and assessing instructors and acting as mountain
@@ -153,16 +125,8 @@
         that really allows us to deliver on our shared aim: to provide the UK's best mountain skills courses, guiding
         and outdoor activities. </p>
     <div class="heading">
-
-
         <img src="hand.jpg" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.2" />
-
-
-
-
         <div class="row">
-
-
             <div class="content">
                 <h3>WHY ACME OUTDOORS?</h3>
                 <p>
@@ -170,70 +134,51 @@
                     From more than 30 years, we’ve been leading the way across Oklahoma — creating the best possible
                     customer experience <span style="color:red">1989</span></p>
                 <a href="#" class="btn">learn more</a>
-
             </div>
             <hr>
         </div>
-
-
-
-    </div>
-
+    </div> -->
     <div class="products" id="#products">
         <div class="heading"> our <span style="color:red">Products :<i class="fa fa-question-circle"
                     aria-hidden="true"></i> </span>
             <p> We stock technical fabrics, plastic hardware, Climashield insulation and more! Everything you need
                 to DIY your gear is available in our store.
                 Our Competencies & Capabilities
-
                 To set up an adventure activity at any location for commercial / personal use.
-
                 To outsource adventure sports equipment supply for a client
                 We specialize in:
-
                 Rope Activities
-
                 Wall climbing
-
                 Zipline
-
                 Zorbing
-
                 Archery etc
-
                 Obstacle Course
-
                 ATV Or Off Road Track
-
                 PaintBall Arena
-
                 Today almost every Resort, Corporate organization, School and Housing Society & Complex are adopting
                 this technique to enhance the skills of their employees, students and Recreational aspect of
                 children.
             </p>
         </div>
         <div class="products" id="products">
-
-
             <div class="card">
                 <img src="y.jpg" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.2"
                     alt="Denim Jeans" style="width:100%">
                 <h1></h1>
                 <p class="price">
-                <h1> $19.99 </h1>
+                    $19.99
                 </p>
-                <p>Quechua Boat MH100 2-Person</p>
-                <p><button>Add to Cart</button></p>
+                <p class="productDesc">Quechua Boat MH100 2-Person</p>
+                <button class="addToCart">Add to Cart</button>
             </div>
             <div class="card">
                 <img src="R.JPG" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.2"
                     alt="Denim Jeans" style="width:100%">
-                <h1></h1>
                 <p class="price">
                 <h1> $29.99 </h1>
                 </p>
                 <p>Camping hike bags</p>
-                <p><button>Add to Cart</button></p>
+                <button>Add to Cart</button>
             </div>
             <div class="card">
                 <img src="p.jpg" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.2"
@@ -243,9 +188,8 @@
                 <h1>$19.99</h1>
                 </p>
                 <p>Camping Platform Shoal Tent Raft Boat</p>
-                <p><button>Add to Cart</button></p>
+                <p><button class="addToCart">Add to Cart</button></p>
             </div>
-
             <div class="card">
                 <img src="treking.jpg" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.2"
                     alt="Denim Jeans" style="width:100%">
@@ -261,94 +205,50 @@
         </div>
     </div>
 
-
-
-
-
-    <div class="reveiw">
+    <!-- <div class="reveiw">
         <br>
         <i>WAYS TO SUPPORT</i>
         <div class="o">
-
             <p>COVID-19 has forced us to close our retail space, but we need support from patrons like yourself now
                 more
                 than ever. Below, we’ve listed the best ways to help us through this season.
-
-
             </p>
-
-
-
             <h1>Support Acme Outdoors.</h1>
-
         </div>
-
         <div class="swap">
             <div class="card1">
-
                 <div class="inside1">
                     <h1>SHOP PRODUCTS</h1>
-
                 </div>
                 <div class="inside2">
-
                 </div>
-
             </div>
-
-
-
             <div class="card2">
                 <div class="inside1">
                     <h1>DONATE BOX</h1>
-
                 </div>
                 <div class="inside2">
-
                 </div>
             </div>
             <div class="card3">
-
                 <div class="inside1">
-
                     <h1>BUY GIFT CARDS</h1>
                 </div>
-
-
-
             </div>
-
         </div>
     </div>
-
-
-
-
-    </div>
-
 
     <div class="safe">
         <div class="ytb">
-
             <h1>How we're keeping you safe during COVID-19</h1>
         </div>
-
         <div>
-
             As an outdoor shop, we’ve taken precautionary measures to ensure the safety of all our customers and
             team members.
-
         </div>
+    </div> -->
 
-
-
-
-    </div>
-
-
-
-
-    <section id="about">
+    <!-- <section id="about">
         <div class="about container">
             <div class="col-left">
                 <div class="about-img" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.2">
@@ -376,38 +276,21 @@
                 <a href="#" class="cta">Acme Outdoors</a>
             </div>
         </div>
-    </section>
+    </section> -->
 
-
-
-    <section class="footer">
-
+    <!-- footer section start -->
+    <!-- <section class="footer">
         <div class="share">
             <a href="https://www.facebook.com/moumita.podder.3557" class="fab fa-facebook-f"></a>
             <a href="https://GitHub.com/moumitapodder" class="fab fa-github"></a>
             <a href="https://www.linkedin.com/in/moumita-podder-663507217" class="fab fa-linkedin"></a>
-
         </div>
-
-
         <div class="credit">created by <span>Acme Outdoors</span> | all rights reserved @2022</div>
-
-    </section>
+    </section> -->
     <!-- footer section ends -->
 
-
-
-
-
-
-
-
-
-
-
-    <script src="vanilla-tilt.js"></script>
-    <script src="script.js"></script>
-
-
-
+    <script src="script\vanilla-tilt.js"></script>
+    <script src="script\script.js"></script>
 </body>
+
+</html>
